# simple-cURL

./: CMakeLists.txt  README.md
src/: ArgParser.cpp  ArgParser.h  FileWriter.cpp  FileWriter.h  HttpHeader.h  Logger.h  NetworkDownloader.cpp  NetworkDownloader.h  ProgressBar.cpp  ProgressBar.h  SignalManager.cpp  SignalManager.h  Socket.cpp  Socket.h  SocketDataStream.cpp  SocketDataStream.h  Utils.cpp  Utils.h  main.cpp
tests/: ArgParserTests.cpp  FileWriterTests.cpp  SocketStreamUtilsTests.cpp  SocketTests.cpp  UrlUtilsTests.cpp  integrational_tests.sh
